# python_django

./: .dockerignore  .env  .env.dev  .env.prod  .env.test  Dockerfile  README.md  Readme.md  db.sqlite3  docker-compose.yaml  pyproject.toml  requirements.txt
demo/: models.py  serializer.py  urls.py  views.py
demo/migrations/: 0001_initial.py  0002_alter_student_id.py  0003_alter_student_id_alter_student_name.py
first_project/: cli.py  settings.py  urls.py
